# src/main/kotlin/com/ord/features/home/api/facades/HomeFacade.kt
@@ -1,10 +1,13 @@
 package com.ord.features.home.api.facades
 
 import com.ord.core.user.model.UserDTO
+import com.ord.features.home.model.HomeActivityPerDay
 import com.ord.features.home.model.HomeResponse
 import org.springframework.http.ResponseEntity
 import reactor.core.publisher.Mono
 
 interface HomeFacade {
     fun getHome(user: UserDTO): Mono<ResponseEntity<HomeResponse>>
+
+    fun getActivity(user: UserDTO): Mono<ResponseEntity<HomeActivityPerDay>>
 }
