# src/main/kotlin/com/ord/features/home/api/facades/impl/HomeFacadeImpl.kt
@@ -2,6 +2,7 @@ package com.ord.features.home.api.facades.impl
 
 import com.ord.core.user.model.UserDTO
 import com.ord.features.home.api.facades.HomeFacade
+import com.ord.features.home.model.HomeActivityPerDay
 import com.ord.features.home.model.HomeResponse
 import com.ord.features.home.model.HomeWindow
 import com.ord.features.home.service.HomeService
@@ -20,6 +21,18 @@ class HomeFacadeImpl(
 
         return homeService
             .getHome(
+                userId = user.id,
+                language = user.selectedLearningLanguage,
+                window = window,
+            )
+            .map { ResponseEntity.ok(it) }
+    }
+
+    override fun getActivity(user: UserDTO): Mono<ResponseEntity<HomeActivityPerDay>> {
+        val window = HomeWindow.at(LocalDate.now(ZoneOffset.UTC))
+
+        return homeService
+            .getActivity(
                 userId = user.id,
                 language = user.selectedLearningLanguage,
                 window = window,
