# src/main/kotlin/com/ord/features/home/model/HomeResponse.kt
@@ -1,6 +1,5 @@
 package com.ord.features.home.model
 
-import com.ord.features.home.model.parts.HomeActivityPerDay
 import com.ord.features.home.model.parts.HomeOverviews
 import com.ord.features.home.model.parts.HomeRecentContent
 import io.swagger.v3.oas.annotations.media.Schema
@@ -9,9 +8,6 @@ import io.swagger.v3.oas.annotations.media.Schema
 data class HomeResponse(
     @Schema(description = "Count cards and sparklines")
     val overviews: HomeOverviews,
-
-    @Schema(description = "Year heatmap")
-    val activityPerDay: HomeActivityPerDay,
 
     @Schema(description = "Recent words and conversations")
     val recentContent: HomeRecentContent,
